# django-graph-walker

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/bookstore/: README.md  requirements.txt
examples/bookstore/books/: factories.py  models.py
examples/bookstore/bookstore/: settings.py
examples/bookstore/scripts/: generate_data.py  visualize.py  walk_and_export.py
examples/bookstore/templates/: graph.html
examples/project_template/: README.md  manage.py  requirements.txt
examples/project_template/project_template/: settings.py
examples/project_template/projects/: models.py
examples/project_template/scripts/: clone_for_user.py  setup_data.py
src/django_graph_walker/: __init__.py  analysis.py  apps.py  conf.py  discovery.py  result.py  spec.py  walker.py
src/django_graph_walker/actions/: clone.py  export.py  interactive.py  visualize.py
src/django_graph_walker/management/commands/: graph_deps.py  graph_fanout.py  graph_schema.py  graph_walk.py
tests/: conftest.py  settings.py  test_analysis.py  test_auto_spec.py  test_clone.py  test_commands.py  test_discovery.py  test_export.py  test_interactive.py  test_spec.py  test_visualize.py  test_walker.py
tests/testapp/: models.py
