[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-graph-walker"
version = "0.1.0"
description = "Walk Django model relationship graphs for cloning, subsetting, export, and visualization."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Danny Shaw" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/dannyshaw/django-graph-walker"
Repository = "https://github.com/dannyshaw/django-graph-walker"
Issues = "https://github.com/dannyshaw/django-graph-walker/issues"

dependencies = [
    "django>=3.2",
]

[project.optional-dependencies]
viz = ["graphviz"]
anonymize = ["faker"]
dev = [
    "pytest",
    "pytest-django",
    "graphviz",
    "faker",
    "ruff",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["src/django_graph_walker"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["src", "."]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
